<resources>
    <string name="app_name">GGL VisitPIR</string>
    <string name="title_activity_maps">GGL VisitPIR</string>
    <string name="title_activity_all">GGL VisitPIR</string>
    <string name="msg_warning_no_location">Lokasi tidak terbaca</string>
    <string name="MSG_DLG_LABEL_OK">OK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="menu1">Refresh</string>
    <string name="menu2">Upload</string>
    <string name="menu_1">Plan Visit</string>
    <string name="menu_1_2">Urgent Plan Visit</string>
    <string name="menu_1_3">Prospect Plan Visit</string>
    <string name="menu_2">Visit</string>
    <string name="menu_3">Change Password</string>
    <string name="menu_4">CheckIn Prospect</string>
    <string name="menu_5">CheckOut Prospect</string>
    <string name="menu_6">History</string>
    <string name="menu_7">Rencana dan Orderan</string>
    <string name="one">ONE</string>
    <string name="eight">EIGHT</string>
    <string name="five">FIVE</string>
    <string name="four">FOUR</string>
    <string name="nine">NINE</string>
    <string name="seven">SEVEN</string>
    <string name="six">SIX</string>
    <string name="ten">TEN</string>
    <string name="three">THREE</string>
    <string name="two">Canvassing Unregister Customer</string>
    <string name="canvassing">CANVASSING DISINI</string>
    <string name="id_rencana">Id Rencana Detail</string>
    <string name="nomor_rencana">Nomor Rencana</string>
    <string name="nama_customer">Nama Customer</string>
    <string name="Foto">Foto Customer</string>
    <string name="checkin">Checkin</string>
    <string name="MSG_DLG_LABEL_EXIT_DIALOG">Apakah anda yakin keluar dari aplikasi ?</string>
    <string name="MSG_DLG_LABEL_EXIT_DIALOG_EDIT_RENCANA">Status aproval rencana akan kembali menjadi (Belum Diaprove), Lanjutkan?</string>
    <string name="MSG_DLG_LABEL_CHANGE_PASSWORD_DIALOG">Aplikasi akan direstart untuk login ulang, lanjutkan?</string>
    <string name="you_want_to_buy_format">You want to buy %1$s</string>
    <string name="you_want_info_about_format">You want information about %1$s</string>
    <string name="buy_it">Buy it!</string>
    <string name="cancel">Mmmmh, no</string>
    <string name="error">Error</string>
    <string name="permissionExplanation">Look, we really need your location because bla bla bla&#8230;</string>
    <string name="switchOnLocationShort">Fitur lokasi (GPS) anda belum aktif, mohon aktifkan telebih dahulu, untuk melanjutkan klik "OK".</string>
    <string name="switchOnLocationLong">Oops - you seem to have disabled location services at the moment. This app is
        really cool and needs your location because bla bla bla. To continue, please click on "OK" and enable
        location. If you\'re worried about battery usage, be sure to switch to energy saving mode. </string>
    <string name="permissionPermanentlyDeclined">Bummer! You have permanently declined the location permission. But
        this app is so cool and needs your location because&#8230; you know. Click "OK" to change the permission
        settings.</string>
    <string name="mockLocationMessage">Stop\nMocking\nMe</string>
    <string name="empty">--</string>
    <string name="ok">OK</string>
    <string-array name="items">
        <item>Pilih ID Rencana Detail</item>
    </string-array>
    <string name="MSG_DLG_LABEL_YES">Ya</string>
    <string name="MSG_DLG_LABEL_NO">Tidak</string>
    <string name="app_jadwal_date_from">Mulai Tanggal</string>
    <string name="app_jadwal_date_to">Sampai Tanggal</string>
    <string name="app_changepwd_curr">Password lama</string>
    <string name="app_changepwd_new">Password baru</string>
    <string name="app_changepwd_confirm">Konfirmasi password baru</string>
    <string name="app_changepwd_simpan">Simpan</string>
    <string name="tanggal">Tanggal</string>
    <string name="masuk">Jam Masuk</string>
    <string name="pulang">Jam Pulang</string>
    <string name="lokasi">Lokasi</string>
    <string name="app_customer_hint_kode_customer">Kode Customer</string>
    <string name="app_customer_hint_nama_karyawan">Karyawan</string>
    <string name="app_customer_hint_customer">Customer</string>
    <string name="app_customer_hint_product">Produk</string>
    <string name="app_checkout_nomor_checkout">Nomor Checkin</string>
    <string name="app_customer_hint_nama_toko">Waktu</string>
    <string name="app_customer_hint_wilayah">Wilayah</string>
    <string name="app_customer_hint_lokasi">Lokasi</string>
    <string name="app_customer_hint_status">Status</string>
    <string name="app_login_processing">Proses login mohon tunggu...</string>
    <string name="app_jadwal_hint_kode_jadwal">Kode Jadwal</string>
    <string name="app_jadwal_hint_date_jadwal">Tanggal Visit</string>
    <string name="app_jadwal_hint_jumlah_customer">Jumlah Customer</string>
    <string name="app_jadwal_processing">Proses download jadwal</string>
    <string name="app_jadwal_processing_empty">Mohon periksa koneksi internet anda, untuk download jadwal</string>
    <string name="app_jadwal_processing_download_content">Proses download content jadwal.</string>
    <string name="app_jadwal_processing_download_success">Proses download content jadwal berhasil.</string>
    <string name="app_login_text_view_download_data">Sinkronisasi Data</string>
    <string name="app_inventory_menu_sales_kanvas">Sales Kanvas</string>
    <string name="app_inventory_menu_belum">Belum Ada</string>
    <string name="app_inventory_menu_approv_noo">Approval NOO</string>
    <string name="app_inventory_menu_sales_survey">Survey</string>
    <string name="app_inventory_sales_nomer_nota">Nomer NOTA</string>
    <string name="app_inventory_sales_alamat">Alamat</string>
    <string name="app_inventory_sales_keterangan">Keterangan</string>
    <string name="app_inventory_retur_stok_save_error">Retur Stok gagal, mohon hubungi head office !</string>
    <string name="app_inventory_retur_stok_processing_upload_retur_stok_failed">Proses upload retur stok ke server gagal !</string>
    <string name="app_inventory_retur_stok_processing_upload_retur_stok_failed_2">Anda sudah melakukan Proses upload retur stok, mohon menunggu konfirmasi dari admin !</string>
    <string name="app_inventory_retur_stok_processing_upload_retur_stok_success">Proses upload retur stok berhasil !</string>
    <string name="app_inventory_retur_stok_processing_upload_retur_stok">Proses upload retur stok</string>
    <string name="app_inventory_menu_stock_summary">Stock Summary</string>
    <string name="app_inventory_menu_retur">Retur</string>
    <string name="app_inventory_menu_stock_retur">Retur Stock</string>
    <string name="app_inventory_sales_to_no_product">Mohon mendownload data stok gudang !</string>
    <string name="app_inventory_retur_stok_textview_kode_customer">Kode Customer</string>
    <string name="app_inventory_retur_stok_textview_nama_customer">Nama Customer</string>
    <string name="app_inventory_menu_stock_request_load">Request Load</string>
    <string name="app_inventory_menu_stock_load_products">Loads Product</string>
    <string name="app_inventory_menu_stock_unload_products">Unloads Product</string>
    <string name="app_inventory_menu_stock_physical_counting">Physical Counting</string>
    <string name="app_inventory_menu_stock_suggested">Suggested Stock</string>
    <string name="app_inventory_request_load_textview_kode_product">Kode Product</string>
    <string name="app_inventory_request_load_textview_nama_product">Nama Product</string>
    <string name="app_inventory_request_load_textview_jumlah">Jumlah</string>
    <string name="app_inventory_request_load_textview_hint">0</string>
    <string name="app_inventory_request_load_failed_empty_data_product">Mohon mendownload data product !</string>
    <string name="app_inventory_processing_upload_request_load_failed">Proses upload request load ke server gagal !</string>
    <string name="app_inventory_processing_upload_request_load_failed_2">Anda sudah melakukan Proses upload request, mohon menunggu konfirmasi dari admin !</string>
    <string name="app_inventory_processing_upload_request_load">Proses upload request load</string>
    <string name="app_inventory_processing_upload_request_load_success">Proses upload request load berhasil !</string>
    <string name="app_inventory_processing_upload_physical_counting_failed">Proses upload update physical counting ke server gagal !</string>
    <string name="app_inventory_processing_upload_physical_counting_failed_2">Anda sudah melakukan Proses update physical counting, mohon melakukan request load !</string>
    <string name="app_inventory_processing_upload_physical_counting_load">Proses update physical counting...</string>
    <string name="app_inventory_processing_upload_physical_counting_load_success">Proses update physical counting berhasil !</string>
    <string name="app_inventory_stock_summary_failed_empty_data_product">Mohon mendownload data product !</string>
    <string name="app_inventory_stock_summary_textview_kode_product">Kode Product</string>
    <string name="app_inventory_stock_summary_textview_nama_product">Product</string>
    <string name="app_inventory_stock_summary_textview_stock_gudang">Stock Gudang</string>
    <string name="app_inventory_stock_summary_textview_stock_van">Stock Van</string>
    <string name="app_inventory_processing_download_stock_summary">Proses download stock summary...</string>
    <string name="app_inventory_processing_download_stock_summary_empty">Mohon periksa koneksi internet anda, untuk download data stock summary !</string>
    <string name="app_inventory_processing_download_load_product">Proses download load product...</string>
    <string name="app_inventory_processing_download_load_product_empty">Mohon periksa koneksi internet anda, untuk download data load product !</string>
    <string name="app_inventory_physical_counting_textview_kode_product">Kode Product</string>
    <string name="app_inventory_physical_counting_textview_nama_product">Nama Product</string>
    <string name="app_inventory_physical_counting_textview_stock_van">Stock Van</string>
    <string name="app_inventory_physical_counting_textview_sisa_stock">Sisa Stock</string>
    <string name="app_inventory_physical_counting_failed_empty_data_stock_van">Download data stock summary di menu inventory terlebih dahulu!</string>
    <string name="app_inventory_physical_counting_failed_empty_nama">Silahkan isi nama dan alamat customer terlebih dahulu</string>
    <string name="app_inventory_unload_product_target_penjualan_processing">Proses download target penjualan...</string>
    <string name="app_inventory_unload_product_target_penjualan_processing_download_failed">Mohon periksa koneksi internet anda, untuk download data target penjualan dari server !</string>
    <string name="app_inventory_unload_product_target_penjualan_button_add_target_penjualan">Add TP</string>
    <string name="pause">Pause Location Updates</string>
    <string name="resume">Resume Location Updates</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="address">Address</string>
    <string name="title_description">Kegiatan :</string>
    <string name="use_address">Use Address</string>
    <string name="app_customer_kode_customer">Kode Customer</string>
    <string name="app_customer_alamat_customer">Alamat</string>
    <string name="app_customer_telp_customer">No HP</string>
    <string name="app_customer_usaha_customer">Nama Usaha</string>
    <string name="app_customer_checkin_no_cjheckin">Nomor Checkin</string>
    <string name="app_customer_checkin_hint_no_cjheckin">Ambil foto dulu</string>
</resources>