<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:id="@+id/toolbar_actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/toolbar_default" />

        <LinearLayout
            android:id="@+id/activity_changepwd_old"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:padding="15dip" >

            <EditText
                android:id="@+id/Current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/description_back_shape"
                android:hint="@string/app_changepwd_curr"
                android:imeOptions="actionDone"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/Ivory3"
                android:inputType="textPassword"/>

            <CheckBox
                android:id="@+id/chbox_showpasswordcurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_changepwd_new"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:padding="15dip" >

            <EditText
                android:id="@+id/newpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/description_back_shape"
                android:hint="@string/app_changepwd_new"
                android:imeOptions="actionDone"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/Ivory3"
                android:inputType="textPassword" />
            <CheckBox
                android:id="@+id/chbox_showpasswordnew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_changepwd_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:padding="15dip" >

            <EditText
                android:id="@+id/confirmpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/description_back_shape"
                android:hint="@string/app_changepwd_confirm"
                android:imeOptions="actionDone"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/Ivory3"
                android:inputType="textPassword"/>
            <CheckBox
                android:id="@+id/chbox_showpasswordconfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/change_execute"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/changepwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"
                android:text="@string/app_changepwd_simpan"/>
        </LinearLayout>
    </LinearLayout>

    <!-- android:layout_marginTop="?android:attr/actionBarSize" -->

    <com.android.pir.gglc.absen.ScrimInsertsFrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scrimInsetsFrameLayout"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:elevation="10dp"
        android:fitsSystemWindows="true"
        app:insetForeground="#4000" >

        <fragment
            android:id="@+id/fragment_drawer"
            android:name="com.android.pir.gglc.absen.NavigationDrawerFragment"
            android:layout_width="@dimen/navigation_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout="@layout/fragment_navigation_drawer" />
    </com.android.pir.gglc.absen.ScrimInsertsFrameLayout>

</android.support.v4.widget.DrawerLayout>